syntax = "proto3";

option csharp_namespace = "Discount.gRPC.Protos";

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string ProductName = 1;
}

message CouponModel {
	int32 Id = 1;
	string ProductName = 2;
	string Description = 3;
	int32 Amount = 4;
}

message CreateDiscountRequest {
	CouponModel Coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel Coupon = 1;
}

message DeleteDiscountRequest {
	string ProductName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}
